chore: add license

--- a/.omc/project-memory.json
+++ b/.omc/project-memory.json
@@ -323,6 +323,12 @@
       "accessCount": 1,
       "lastAccessed": 1771151426710,
       "type": "file"
+    },
+    {
+      "path": "LICENSE",
+      "accessCount": 1,
+      "lastAccessed": 1771151712947,
+      "type": "file"
     }
   ],
   "userDirectives": []
